<resources>
    <string name="app_name">Academia</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="student">STUDENT</string>
    <string name="notice_board">Notice Board</string>
    <string name="todo">Todo</string>
    <string name="teacher">TEACHER</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="choose_docuent_to_upload">Choose Docuent to Upload</string>
    <string name="view_documents">View Documents</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="no_file_selected">No file selected</string>
    <string name="view_uploads">View Uploads</string>
    <string name="enter_a_name_for_your_file">Enter a name for your file</string>
    <string name="mech">MECH</string>
    <string name="extc">EXTC</string>
    <string name="textiles">Textiles</string>
    <string name="civil">Civil</string>
    <string name="it">IT</string>
    <string name="mca">MCA</string>

    <string-array name="people">
        <item>Student</item>
        <item>Teacher</item>
        <item>Staff</item>
    </string-array>

    <string-array name="stream">
        <item>MCA</item>
        <item>MECH</item>
        <item>Textiles</item>
        <item>EXTC</item>
        <item>Civil</item>
        <item>IT</item>
    </string-array>

</resources>
